<resources>
    <string name="app_name">PowerMeter</string>
    <string name="button_bluetooth">Bluetooth</string>
    <string name="Voltage">Voltage: </string>
    <string name="AC">AC</string>
    <string name="DC">DC</string>
    <string name="USB">USB</string>
    <string name="Current">Current: </string>
    <string name="power">Power:</string>
    <string name="Power_Factor">Power factor:</string>
    <string name="Reset">Reset</string>
    <string name="Cumulative_capacity">Capacity:</string>
    <string name="Cumulative_power">Electricity:</string>
    <string name="KWH">kWh</string>
    <string name="carbon_dioxide">Carbon dioxide:</string>
    <string name="Cumulative_electricity_bill">Electricity charges:</string>
    <string name="AC_frequency">AC freq:</string>
    <string name="time_record">Time record:</string>
    <string name="Internal_temperature">Internal temperature:</string>
    <string name="Electricity_price_setting">Elec. price setting:</string>
    <string name="Backlight">Backlight:</string>
    <string name="Long_black">Long black</string>
    <string name="Long_bright">Long bright</string>
    <string name="second">s</string>
    <string name="BackLight">BL:</string>
    <string name="SteUp">SETUP</string>
    <string name="confirm">Okay</string>
    <string name="button_export">Export</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_textdisplay">Text</string>
    <string name="title_bluetoothlist">Bluetooth</string>
    <string name="title_export">Export</string>
    <string name="Warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="Clear">The cumulative power, carbon dioxide, the cumulative charge will be reset</string>
    <string name="Clear1">Cumulative capacity will be cleared</string>
    <string name="Clear2">Cumulative time will be cleared</string>
    <string name="Clear21">The cumulative power will be reset</string>
    <string name="title_graph">Graph</string>
    <string name="button_import">Import</string>
    <string name="exit">Exit</string>
    <string name="DataPlus">USB_D + :</string>
    <string name="DataMinus">USB_D - :</string>
    <string name="DefaultVoltage">000.0V</string>
    <string name="DefaultCurrent">0.000A</string>
    <string name="DefaultPower">0000.0W</string>
    <string name="DefaultPF">0.00PF</string>
    <string name="DefaultCumulative">0000.0</string>
    <string name="DefaultCarbon">000.00kg</string>
    <string name="DefaultBill">0.00</string>
    <string name="DefaultFreq">00.0Hz</string>
    <string name="DefaultTemp">00℃/32℉</string>
    <string name="DefaultPrice">0.00</string>
    <string name="DefaultBL">0S</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="locationInfo">Since it is possible to calculate your location from known nearby Bluetooth devices, Android requires Location permissions to access Bluetooth devices directly. Since this app requires a Bluetooth connection, Location access is needed. Please click Okay to grant Location permission.</string>
    <string name="Info">Info</string>
    <string name="title_table">Table</string>
</resources>