<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_textdisplay"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        android:title="@string/title_textdisplay" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_table"
        android:icon="@drawable/ic_baseline_table_rows_24"
        android:title="Table" />

    <item
        android:id="@+id/navigation_bluetoothlist"
        android:icon="@drawable/ic_baseline_bluetooth_24"
        android:title="@string/title_bluetoothlist" />

    <item
        android:id="@+id/navigation_export"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/title_export" />

</menu>